fixed z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ nav form input{
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 3;
     background:rgba(0,0,0,0.6);
 }
 
